2011-01-19 Yu-Sung Su     <suyusung@tsinghua.edu.cn> 
   * DESCRIPTION (Version, Date): 0.09-16
   * R/print: set this as generic to pass the check
 

2011-11-22 Yu-Sung Su     <suyusung@tsinghua.edu.cn> 
   * DESCRIPTION (Version, Date): 0.09-15
   * inst/CITATION: add citation info
   * man/*.Rd: update JSS paper info
   

2011-02-15 Yu-Sung Su     <suyusung@tsinghua.edu.cn> 
   * DESCRIPTION (Version, Date): 0.09-13
   * R/mi.scatterplot: reactivated imputed points 
   
   
2011-02-09 Yu-Sung Su     <suyusung@tsinghua.edu.cn> 
   * DESCRIPTION (Version, Date): 0.09-12

2011-02-08 Yu-Sung Su     <suyusung@tsinghua.edu.cn> 
   * DESCRIPTION (Version, Date): 0.09-11.06
   * R/plot: kill the residualplot

2011-02-05 Yu-Sung Su     <suyusung@tsinghua.edu.cn> 
   * DESCRIPTION (Version, Date): 0.09-11.05
   * DESCRIPTION: add arm version dependency
   * R/load.first: lib --> lib.loc in packageDescription


2011-02-04 Yu-Sung Su     <ys463@columbia.edu> 
   * DESCRIPTION (Version, Date): 0.09-11.04
   * R/mi.pmm: fix a bug in predict() line 25


2010-11-10 Yu-Sung Su     <ys463@columbia.edu> 
   * DESCRIPTION (Version, Date): 0.09-11.03
   * R/plot: add points for imputed residuals.
   * R/mi.continuous: add a slot @model$startY that saves last used Y.
   * R/mi.binary: add a slot @model$startY that saves last used Y.
   * R/mi.count: add a slot @model$startY that saves last used Y.



2010-5-27 Yu-Sung Su     <ys463@columbia.edu> 
   * DESCRIPTION (Version, Date): 0.09-06
   * R/mi.binary: n.iter = 25 when start is supplied.
   * R/mi.count: 
        1. draw.from.beta = FALSE, to ensure comupational stability
        2. start = NULL, to ensure comupational stability
   * R/mi.preprocess: new coding.
   * R/mi:
        1. add mi.preprocessed method.
        2. add mi.default
        3. separate mi.preprocess out of mi.
   * R/AllClass: add mi.preprocessed class.
   
   
2010-5-17 Yu-Sung Su     <ys463@columbia.edu> 
   * DESCRIPTION (Version, Date): 0.09-05